--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --section-pt: 94px;
   --section-pb: 94px;
   --card-set-gap: 30px;
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -102,6 +103,11 @@ section {
   display: none;
 }
 
+.img-email,
+.img-tel {
+  transition: fill 250ms var(--cubic);
+}
+
 .img-email:hover,
 .img-email:focus,
 .img-tel:hover,
@@ -137,6 +143,13 @@ section {
   margin-right: 10px;
 }
 
+.img-instagram,
+.img-twitter,
+.img-facebook,
+.img-linkedin {
+  transition: fill 250ms var(--cubic);
+}
+
 .social-links-icon:hover .img-instagram,
 .social-links-icon:focus .img-instagram {
   fill: var(--white-text-color);
@@ -155,6 +168,10 @@ section {
 .social-links-icon:hover .img-linkedin,
 .social-links-icon:focus .img-linkedin {
   fill: var(--white-text-color);
+}
+
+.social-links-icon {
+  transition: background-color 250ms var(--cubic);
 }
 
 .social-links-icon:hover,
@@ -213,11 +230,28 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  transition: color 250ms var(--cubic);
 }
 
 .navigation-link:hover,
 .navigation-link:focus {
   color: var(--accent-color);
+}
+
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 .list .current {
@@ -237,6 +271,7 @@ section {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-text-color);
+  transition: color 250ms var(--cubic);
 }
 
 .contact-header:hover,
@@ -361,6 +396,29 @@ section {
   margin-left: 30px;
 }
 
+.services-item {
+  position: relative;
+}
+
+.services-item-overlay {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--white-text-color);
+}
+
 /* ============= END SERVICES ============= */
 
 /* ============= TEAM ============= */
@@ -419,6 +477,7 @@ section {
 .client-item {
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: border 250ms var(--cubic);
 }
 
 .client-item:hover,
@@ -445,6 +504,7 @@ section {
 
 .img-logo {
   fill: #afb1b8;
+  transition: fill 250ms var(--cubic);
 }
 
 /* ============= END CLIENT ============= */
@@ -518,6 +578,51 @@ section {
 
 /* ============= END FOOTER ============= */
 
+/* ============= BACKDROP ============= */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: all 250ms var(--cubic);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: #ffffff;
+}
+
+.modal-close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+/* ============= END BACKDROP ============= */
+
 /* ============= PORTFOLIO ============= *
 /* ============= FILTER ============= */
 
@@ -530,6 +635,7 @@ section {
 
 .filter-item {
   display: block;
+  transition: box-shadow 250ms var(--cubic);
 }
 
 .filter-item:hover,
@@ -553,6 +659,7 @@ section {
   background: var(--secondary-font-color);
   color: var(--primary-text-color);
   cursor: pointer;
+  transition: background-color 250ms var(--cubic), color 250ms var(--cubic);
 }
 
 .filter-btn:hover,
@@ -580,6 +687,7 @@ section {
   margin-left: var(--card-set-gap);
   margin-top: var(--card-set-gap);
   border: 0;
+  transition: box-shadow 250ms var(--cubic);
 }
 
 .card-item:hover {
@@ -611,6 +719,36 @@ section {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+
+.card-item-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: var(--accent-color);
+  color: var(--white-text-color);
+  padding-top: 63px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  overflow: scroll;
+  transform-origin: left top;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 250ms var(--cubic);
+}
+
+.card-item-link:hover .overlay,
+.card-item-link:focus .overlay {
+  transform: translateY(0);
+  opacity: 1;
+  transition: transform 250ms var(--cubic);
 }
 
 /* ============= END PROJECTS ============= */
