--- a/css/styles.css
+++ b/css/styles.css
@@ -103,10 +103,10 @@ section {
   display: none;
 }
 
-.img-email,
+/* .img-email,
 .img-tel {
   transition: fill 250ms var(--cubic);
-}
+} */
 
 .img-email:hover,
 .img-email:focus,
@@ -136,7 +136,7 @@ section {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: #afb1b8;
+  fill: var(--white-text-color);
 }
 
 .social-links:not(:last-child) {
@@ -635,13 +635,6 @@ section {
 
 .filter-item {
   display: block;
-  transition: box-shadow 250ms var(--cubic);
-}
-
-.filter-item:hover,
-.filter-item:focus {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-list .filter-item + .filter-item {
@@ -659,13 +652,16 @@ section {
   background: var(--secondary-font-color);
   color: var(--primary-text-color);
   cursor: pointer;
-  transition: background-color 250ms var(--cubic), color 250ms var(--cubic);
+  transition: background-color 250ms var(--cubic), box-shadow 250ms var(--cubic),
+    color 250ms var(--cubic);
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
   background-color: var(--accent-color);
   color: var(--white-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* ============= END FILTER ============= */
@@ -737,7 +733,7 @@ section {
   padding-right: 24px;
   padding-bottom: 63px;
   padding-left: 24px;
-  overflow: scroll;
+  /* overflow: scroll; */
   transform-origin: left top;
   opacity: 0;
   transform: translateY(100%);
